2005-07-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.5b.

	* doc/automake.texi (Public macros) <AM_WITH_DMALLOC>: Reword to
	fix an underful hbox.
	* lib/INSTALL, lib/config.guess, lib/config.sub, lib/texinfo.tex:
	New upstream version.

2005-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.5.

2005-06-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (read_am_file): Correctly diagnose comments following
	trailing backslash.
	* tests/commen10.test: New file.
	* tests/Makefile.am (TESTS): Add commen10.test.
	Report from Harald Dunkel.

2005-06-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/mkinstalldirs: Fix support for directory name with spaces if
	`mkdir -p' does not work.
	* tests/Makefile.am (TESTS): Add mkinst3.test.
	* tests/mkinst3.test: New file.
	Report from Noah Friedman.

	* doc/automake.texi (Include, Extending aclocal): Typos.
	Report from Karl Berry.

2005-06-28  Stepan Kasal  <kasal@ucw.cz>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/mdate-sh: Avoid infinite loop with GNU ls when TIME_STYLE is set.
	* tests/txinfo28.test: Set TIME_STYLE.
	Report from Vincent Lefevre and James Youngman.

2005-06-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (define, _new): Remember the helper
	variable created for the last conditional += on each variable, and
	only append further += in the same condition to this last helper
	variable, not to older helper variables.  This way the order of
	the items appended to the variable is preserved.
	* tests/cond21.test: Adjust.
	* tests/cond38.test: New file.
	* tests/Makefile.am (TESTS): Add cond38.test.
	Report from Ed Hartnett.

2005-06-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/aclocal5.test: Adjust to recent CVS Autoconf changes.

	* automake.in (handle_footer): Do not output an unformatted
	definition of SOURCES, it is already done correctly in