@@ -1,4 +1,4 @@
 @set UPDATED 2 July 2005
 @set UPDATED-MONTH July 2005
-@set EDITION 1.9.5b
-@set VERSION 1.9.5b
+@set EDITION 1.9.5c
+@set VERSION 1.9.5c
