@@ -1,4 +1,4 @@
-Bugs fixed in 1.9.5b:
+Bugs fixed in 1.9.5c:
 
 * Longstanding bugs:
 
