@@ -1,5 +1,7 @@
 2005-07-02  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.ac, NEWS: Bump version to 1.9.5c.
+
 	* configure.ac, NEWS: Bump version to 1.9.5b.
 
 	* doc/automake.texi (Public macros) <AM_WITH_DMALLOC>: Reword to
